# rag_base

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
api_backend/: Dockerfile  api_activation.py
api_backend/gigachat/: Dockerfile  api_activation.py  api_activation_like_gigachat.py
aurora/: __init__.py  blanks.py  config.py  database_management.py  documents.py  gigach_llm.py  god_api.py  llm_wrapper.py  setup_vectorbase.py  speech.py  tools.py
bairdotr/: __init__.py  blanks.py  config.py  database_management.py  documents.py  llm_wrapper.py  ollama_llm.py  prepare_raw_docs.py  setup_vectorbase.py  tools.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
telegram_backend/: Dockerfile  send_message_to_all_users.py  telegram_chat.py
telegram_backend/utils/: __init__.py  api_connection.py  config.py  some_telegram_functions.py
