[tool.poetry]
name = "bairdotr"
version = "0.0.1"
description = ""
authors = ["Vsevolod <wsewolod@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.9"
faiss-cpu = "^1.9.0.post1"
langchain-ollama = "^0.2.0"
sentence-transformers = "^3.3.1"
langchain-huggingface = "^0.1.2"
langchain-community = "^0.3.8"
pandas = "^2.2.3"
fastapi = {extras = ["standard"], version = "^0.115.5", optional = true}
uvicorn = {extras = ["standard"], version = "^0.32.1", optional = true}

[tool.poetry.extras]
api = ["fastapi", "uvicorn"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
